Bump up stale dependencies